force-app/main/default/objects/Walkins__c/Walkins__c.object-meta.xml
<CustomObject>
    <label>Walkins</label>
    <nameField>
        <label>Walkins</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Walkins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>