force-app/main/default/objects/Walkins__c/fields/Average_Lead_Time_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Average_Lead_Time_in_Days__c</fullName>
    <label>Average Lead Time in Days</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>