force-app/main/default/objects/Walkins__c/fields/Number_of_Rentals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rentals__c</fullName>
    <label>Number of Rentals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>