force-app/main/default/objects/Walkins__c/fields/Walk_in__c.field-meta.xml
<CustomField>
    <fullName>Walk_in__c</fullName>
    <label>Walk in</label>
    <length>64</length>
    <type>Text</type>
</CustomField>