force-app/main/default/objects/Walkins__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pick_Up_Branch_Code__c</columns>
    <columns>Pick_up_Date__c</columns>
    <columns>Walk_in__c</columns>
    <columns>Number_of_Rentals__c</columns>
    <columns>Average_Lead_Time_in_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>